--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -32,6 +32,7 @@
 
         <!--User-->
         <EditText
+            android:id="@+id/edtUsername"
             android:inputType="text"
             android:hint="Username"
             android:layout_width="match_parent"
@@ -39,6 +40,7 @@
 
         <!--Password-->
         <EditText
+            android:id="@+id/edtPassword"
             android:inputType="textPassword"
             android:hint="Password"
             android:layout_width="match_parent"
@@ -46,6 +48,7 @@
 
         <!--Remember CheckBox-->
         <CheckBox
+            android:id="@+id/chbRememberMe"
             android:textColor="@color/colorPrimaryDark"
             android:text="Remember Me"
             android:layout_width="match_parent"
@@ -53,6 +56,7 @@
 
         <!--Login-->
         <Button
+            android:id="@+id/btnLogin"
             android:text="Login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
