--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,67 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainFragment">
 
-    <!--Content-->
-    <LinearLayout
-        android:layout_margin="@dimen/margin"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <Button
+        android:id="@+id/btnPrint"
+        android:layout_centerHorizontal="true"
+        android:text="Wait Few Minus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-        <!--Logo-->
-        <ImageView
-            android:layout_gravity="center"
-            android:src="@drawable/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btnPrintAgain"
+        android:text="Print Again"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/btnPrint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-        <!--Title-->
-        <TextView
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_margin="15dp"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <!--User-->
-        <EditText
-            android:id="@+id/edtUsername"
-            android:inputType="text"
-            android:hint="Username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <!--Password-->
-        <EditText
-            android:id="@+id/edtPassword"
-            android:inputType="textPassword"
-            android:hint="Password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <!--Remember CheckBox-->
-        <CheckBox
-            android:id="@+id/chbRememberMe"
-            android:textColor="@color/colorPrimaryDark"
-            android:text="Remember Me"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <!--Login-->
-        <Button
-            android:id="@+id/btnLogin"
-            android:text="Login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-
-    </LinearLayout>
-
-</FrameLayout>
+</RelativeLayout>
