--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="margin">30dp</dimen>
     <dimen name="h1">24sp</dimen>
+    <dimen name="h2">18sp</dimen>
+    <dimen name="h3">14sp</dimen>
+    <dimen name="icon">50dp</dimen>
 </resources>
