--- a/app/src/main/res/layout/fragment_bill_detail.xml
+++ b/app/src/main/res/layout/fragment_bill_detail.xml
@@ -5,10 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".BillDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!--Top-->
+
+
+
+    <!--Middle-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewBillDetail"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent"/>
+
+
+    <!--Base-->
 
 </FrameLayout>
