--- a/app/src/main/res/layout/recycler_view_bill.xml
+++ b/app/src/main/res/layout/recycler_view_bill.xml
@@ -73,6 +73,15 @@
                     android:textSize="@dimen/h3"
                     android:textStyle="normal" />
 
+                <TextView
+                    android:textColor="@color/colorPrimaryDark"
+                    android:id="@+id/txtDetail3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Detail Line 3"
+                    android:textSize="@dimen/h3"
+                    android:textStyle="normal" />
+
             </LinearLayout>
 
 
