Bill Detail Title Success

--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -8,6 +8,7 @@
 
     <!--Title Bar-->
     <LinearLayout
+        android:background="@color/colorWhite"
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
