--- a/app/src/main/res/layout/fragment_bill_detail.xml
+++ b/app/src/main/res/layout/fragment_bill_detail.xml
@@ -6,26 +6,94 @@
     tools:context=".BillDetailFragment">
 
     <!--Top-->
+    <RelativeLayout
+        android:background="@color/colorWhite"
+        android:id="@+id/LayoutTop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/colorBlack"
+            android:id="@+id/txtLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Title Left"
+            android:textSize="@dimen/h3"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_below="@id/txtLeft"
+            android:textColor="@color/colorPrimaryDark"
+            android:id="@+id/txtLeft2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Title Left2"
+            android:textSize="@dimen/h3"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:textColor="@color/colorBlack"
+            android:id="@+id/txtRight"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Title Right"
+            android:textSize="@dimen/h3"
+            android:textStyle="bold" />
+
+
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/line"
+        android:layout_below="@id/LayoutTop"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dddddd" />
 
 
     <!--Middle-->
     <android.support.v7.widget.RecyclerView
-        android:layout_above="@id/txtTotal"
         android:id="@+id/recyclerViewBillDetail"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_above="@id/layoutBase"
+        android:layout_below="@+id/line" />
 
 
     <!--Base-->
-    <TextView
-        android:layout_alignParentRight="true"
-        android:textStyle="bold"
-        android:textSize="@dimen/h1"
+    <RelativeLayout
+        android:id="@+id/layoutBase"
+        android:padding="10dp"
+        android:background="@color/colorWhite"
         android:layout_alignParentBottom="true"
-        android:id="@+id/txtTotal"
-        android:text="Total = 789"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <TextView
+            android:id="@+id/txtTotalWeight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/h2"/>
+
+        <TextView
+            android:textColor="@color/colorAccent"
+            android:id="@+id/txtTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="Total = 789"
+            android:textSize="@dimen/h2"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
