--- a/app/src/main/res/layout/recycler_view_bill.xml
+++ b/app/src/main/res/layout/recycler_view_bill.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -87,6 +88,18 @@
 
 
         </LinearLayout>
+
+        <TextView
+            android:layout_marginRight="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:textColor="@color/colorAccent"
+            android:id="@+id/txtTotalPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total"
+            android:textSize="@dimen/h3"
+            android:textStyle="bold" />
 
         <ImageView
             android:layout_alignParentRight="true"
