--- a/app/src/main/res/layout/fragment_authen.xml
+++ b/app/src/main/res/layout/fragment_authen.xml
@@ -21,7 +21,7 @@
 
         <!--Title-->
         <TextView
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorAccent"
             android:layout_margin="15dp"
             android:textStyle="bold"
             android:textSize="24sp"
