--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -7,35 +7,15 @@
     tools:context=".BillFragment">
 
     <!--Title Bar-->
-    <LinearLayout
+    <android.support.design.widget.TabLayout
         android:background="@color/colorWhite"
-        android:padding="10dp"
+        android:id="@+id/tabLayoutBill"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
 
-        <TextView
-            android:id="@+id/txtTitle0"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:text="Title"
-            android:textSize="@dimen/h3"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/txtTitle1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:text="Title"
-            android:textSize="@dimen/h3"
-            android:textStyle="bold" />
-
-
-    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
 
 
     <!--Recycler View-->
