--- a/app/src/main/res/layout/fragment_bill_detail.xml
+++ b/app/src/main/res/layout/fragment_bill_detail.xml
@@ -5,8 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".BillDetailFragment">
 
+    <!--ToolBar-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarBillDetail"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"/>
+
     <!--Top-->
     <RelativeLayout
+        android:layout_below="@+id/toolbarBillDetail"
         android:background="@color/colorWhite"
         android:id="@+id/LayoutTop"
         android:layout_width="match_parent"
