--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -35,17 +35,28 @@
         android:layout_gravity="start"
         android:orientation="vertical"
         android:background="#FFFFFF"
-        android:layout_width="320dp"
+        android:layout_width="260dp"
         android:layout_height="match_parent">
 
         <TextView
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_margin="10dp"
             android:textStyle="bold"
             android:textSize="@dimen/h1"
             android:text="Menu"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="36dp" />
 
+        <View
+            android:layout_marginHorizontal="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#dddddd" />
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerDrawerMenu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 
     </LinearLayout>
