Recycler Bill Detail Visible Gone

--- a/app/src/main/res/layout/recycler_view_bill.xml
+++ b/app/src/main/res/layout/recycler_view_bill.xml
@@ -20,14 +20,17 @@
                 android:layout_height="@dimen/icon">
 
                 <ImageView
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="8dp"
                     android:id="@+id/imvChannel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
-                    android:src="@drawable/ic_action_logout" />
+                    android:src="@drawable/channal_0" />
 
                 <!--Receipts Channel-->
                 <TextView
+                    android:visibility="gone"
                     android:id="@+id/txtChannel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -38,21 +41,12 @@
                     android:textSize="@dimen/h3"
                     android:textStyle="bold" />
 
-                <!--Receipts Method-->
-                <TextView
-                    android:id="@+id/txtMethod"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="เงินสด"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/h2"
-                    android:textStyle="bold" />
 
             </RelativeLayout>
 
             <!--Content-->
             <LinearLayout
+                android:layout_marginRight="100dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -76,11 +70,11 @@
                     android:textStyle="normal" />
 
                 <TextView
-                    android:textColor="@color/colorPrimaryDark"
                     android:id="@+id/txtDetail3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Detail Line 3"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/h3"
                     android:textStyle="normal" />
 
@@ -90,17 +84,34 @@
 
         </LinearLayout>
 
-        <TextView
-            android:layout_marginRight="30dp"
+        <LinearLayout
+            android:layout_marginRight="15dp"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/txtTotalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Total"
-            android:textSize="@dimen/h3"
-            android:textStyle="bold" />
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <!--Receipts Method-->
+            <TextView
+                android:layout_gravity="right"
+                android:id="@+id/txtMethod"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="เงินสด"
+                android:textColor="@color/colorAccent"
+                android:textSize="@dimen/h3"/>
+
+            <TextView
+                android:id="@+id/txtTotalPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="Total"
+                android:textColor="@color/colorAccent"
+                android:textSize="@dimen/h2"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <ImageView
             android:layout_alignParentRight="true"
@@ -112,7 +123,7 @@
     </RelativeLayout>
 
     <View
-        android:layout_marginLeft="58dp"
+        android:layout_marginLeft="48dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#dddddd" />
