--- a/app/src/main/res/layout/fragment_member.xml
+++ b/app/src/main/res/layout/fragment_member.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/colorWhite"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,12 +9,14 @@
 
     <!--Search View-->
     <android.support.v7.widget.SearchView
+        android:background="@color/colorBG"
         android:id="@+id/searchViewMember"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <!--ListView-->
     <ListView
+        android:layout_margin="10dp"
         android:id="@+id/listViewMember"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
