--- a/app/src/main/res/layout/recycler_member.xml
+++ b/app/src/main/res/layout/recycler_member.xml
@@ -2,20 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorWhite"
     android:orientation="vertical">
 
     <TextView
+        android:layout_marginVertical="10dp"
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:text="Name"
-        android:textSize="@dimen/h2" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#c1c1c1" />
-
+        android:textSize="@dimen/h3" />
 
 </LinearLayout>
