--- a/app/src/main/res/layout/fragment_member.xml
+++ b/app/src/main/res/layout/fragment_member.xml
@@ -9,16 +9,20 @@
 
     <!--Search View-->
     <android.support.v7.widget.SearchView
-        android:background="@color/colorBG"
         android:id="@+id/searchViewMember"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <View
+        android:background="@color/colorBG"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
+
     <!--ListView-->
     <ListView
-        android:layout_margin="10dp"
         android:id="@+id/listViewMember"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_margin="10dp" />
 
 </LinearLayout>
