--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -12,9 +12,15 @@
         android:layout_height="match_parent"/>
 
     <!--TabHost-->
+    <View
+        android:layout_above="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#b1b1b1" />
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
-        android:background="#FFFFFF"
+        android:background="@color/colorPager"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
