--- a/app/src/main/res/layout/recycler_view_bill_detail.xml
+++ b/app/src/main/res/layout/recycler_view_bill_detail.xml
@@ -78,6 +78,6 @@
         android:layout_marginHorizontal="10dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dddddd" />
+        android:background="@color/colorLine" />
 
 </LinearLayout>
