--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBG">#fafafa</color>
+    <color name="colorPager">#f9f9f9</color>
+    <color name="colorLine">#e1e1e1</color>
 </resources>
