--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -15,24 +15,34 @@
 
     <!--Content Menu-->
     <LinearLayout
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp">
 
 
         <!--Category-->
-        <FrameLayout
+        <android.support.design.widget.TabLayout
+            android:background="@color/colorWhite"
+            android:id="@+id/tabLayoutProduct"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="6dp"/>
+
+        <!--<FrameLayout
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerCategory"
+                android:id="@+id/tabLayoutProductCategory"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="wrap_content"/>
 
-        </FrameLayout>
+        </FrameLayout>-->
 
 
         <!--Product-->
