--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -7,6 +7,7 @@
 
     <!--Pager-->
     <android.support.v4.view.ViewPager
+        android:layout_above="@+id/tabLayout"
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
