--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -8,14 +8,14 @@
 
     <!--Title Bar-->
     <android.support.design.widget.TabLayout
-        android:background="@color/colorWhite"
         android:id="@+id/tabLayoutBill"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"></android.support.design.widget.TabLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="6dp"/>
+        android:layout_height="6dp" />
 
 
     <!--Recycler View-->
