--- a/app/src/main/res/layout/fragment_member.xml
+++ b/app/src/main/res/layout/fragment_member.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/colorWhite"
-    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
+    android:orientation="vertical"
     tools:context=".MemberFragment">
 
     <!--Search View-->
     <android.support.v7.widget.SearchView
         android:id="@+id/searchViewMember"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <View
-        android:background="@color/colorBG"
         android:layout_width="match_parent"
-        android:layout_height="6dp"/>
+        android:layout_height="6dp"
+        android:background="@color/colorBG" />
 
     <!--ListView-->
     <ListView
         android:id="@+id/listViewMember"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp" />
+        android:layout_margin="10dp"
+        android:baselineAligned="false" />
 
 </LinearLayout>
