--- a/app/src/main/res/layout/fragment_bill_detail.xml
+++ b/app/src/main/res/layout/fragment_bill_detail.xml
@@ -59,31 +59,26 @@
 
     </RelativeLayout>
 
-    <View
-        android:id="@+id/line"
-        android:layout_below="@id/LayoutTop"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#dddddd" />
+    <!--<View-->
+        <!--android:id="@+id/line"-->
+        <!--android:layout_below="@id/LayoutTop"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:background="#dddddd" />-->
 
 
     <!--Middle-->
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewBillDetail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/layoutBase"
-        android:layout_below="@+id/line" />
+        android:layout_above="@+id/txtTotal"
+        android:layout_below="@+id/LayoutTop"/>
+        <!--android:layout_below="@+id/line" />-->
 
 
     <!--Base-->
-    <RelativeLayout
-        android:id="@+id/layoutBase"
-        android:padding="10dp"
-        android:background="@color/colorWhite"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
 
         <TextView
@@ -97,12 +92,41 @@
             android:id="@+id/txtTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
+            android:layout_above="@+id/buttonBottom"
             android:layout_alignParentRight="true"
             android:text="Total = 789"
             android:textSize="@dimen/h2"
             android:textStyle="bold" />
 
-    </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/buttonBottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true">
+
+            <Button
+                android:id="@+id/btnEdit"
+                android:text="สั่งเพิ่ม/แก้ไข"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/btnPaymentAgain"
+                android:text="Print Again"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/btnPayment"
+                android:text="Connect Printer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+
+
 
 
 </RelativeLayout>
